# cplusplus_exercises

./: .gitignore  README.md  fullbuild.sh
chapter1/: chapter1.md
chapter1/chapter1-6/src/reserve/: CMakeLists.txt
chapter1/chapter1-8/: CMakeLists.txt
chapter1/chapter1-8/src/: CMakeLists.txt
chapter1/chapter1-9/: CMakeLists.txt
chapter1/chapter1-9/src/: readfile.txt
chapter1/chapter1-9/src/test/: exercises.cpp
chapter2/: chapter2.md
chapter3/: chapter3.md
chapter3/chapter3-1/src/test/: exercises.cpp
chapter3/chapter3-10/src/test/: exercises.cpp
chapter3/chapter3-2/src/test/: exercises.cpp
chapter3/chapter3-3/src/test/: exercises.cpp
chapter3/chapter3-4/src/test/: exercises.cpp
chapter3/chapter3-5/src/test/: exercises.cpp
chapter3/chapter3-6/: CMakeLists.txt
chapter3/chapter3-6/src/test/: exercises.cpp
chapter3/chapter3-7/src/test/: exercises.cpp
chapter3/chapter3-8/src/test/: exercises.cpp
chapter3/chapter3-9/src/test/: exercises.cpp
chapter4/: chapter4.md
chapter4/chapter4-1/: main.cpp
chapter4/chapter4-1/src/: CMakeLists.txt
chapter4/chapter4-1/src/test/: exercises.cpp
chapter4/chapter4-2/src/test/: exercises.cpp
chapter4/chapter4-3/src/test/: exercises.cpp
chapter4/chapter4-4/src/test/: exercises.cpp
chapter4/chapter4-5/src/: CMakeLists.txt
chapter4/chapter4-5/src/math/: CMakeLists.txt  calculator.cpp  calculator.hpp  complex.cpp  complex.hpp
chapter4/chapter4-5/src/test/: exercises.cpp
chapter4/chapter4-6/src/test/: exercises.cpp
chapter4/chapter4-7/src/test/: exercises.cpp
chapter4/chapter4-8/src/test/: exercises.cpp
chapter5/: chapter5.md
chapter5/chapter5-1/src/test/: exercises.cpp
chapter5/chapter5-2/src/reserve/: CMakeLists.txt
chapter5/chapter5-2/src/test/: exercises.cpp
chapter5/chapter5-3/src/test/: CMakeLists.txt  exercises.cpp
chapter6/: chapter6.md
chapter7/: chapter7.md
chapter_template/: CMakeLists.txt  main.cpp
chapter_template/src/test/: exercises.cpp
include/Catch2/: catchhelper.hpp
